--- a/src/app/bizonylat/bizonylatirat/bizonylat-irat-container/bizonylat-irat-container.component.html
+++ b/src/app/bizonylat/bizonylatirat/bizonylat-irat-container/bizonylat-irat-container.component.html
@@ -23,5 +23,5 @@ Vagolap = 5
 </ng-container>
 
 <ng-container *ngIf="bizonylatkapcsolatservice.ContainerMode === 5">
-  <app-vagolap></app-vagolap>
+  <app-bizonylat-irat-vagolaprol></app-bizonylat-irat-vagolaprol>
 </ng-container>
