--- a/src/app/bizonylat/bizonylatirat/bizonylat-irat-list/bizonylat-irat-list.component.html
+++ b/src/app/bizonylat/bizonylatirat/bizonylat-irat-list/bizonylat-irat-list.component.html
@@ -8,8 +8,8 @@
       <button [disabled]="eppFrissit" (click)="uj()" class="btn btn-sm btn-outline-primary navgomb">
         <i class="fa fa-plus" style="margin-right: 3px" aria-hidden="true"></i>
       </button>
-      <button [disabled]="eppFrissit" (click)="vagolap()" class="btn btn-sm btn-outline-primary navgomb">
-        Vágólap
+      <button [disabled]="eppFrissit" (click)="vagolaprol()" class="btn btn-sm btn-outline-primary navgomb">
+        <i class="fa fa-plus" style="margin-right: 3px" aria-hidden="true"></i>Vágólapról
       </button>
     </nav>
   </div>
