--- a/src/app/projekt/projekt/projekt-egy/projekt-egy.component.html
+++ b/src/app/projekt/projekt/projekt-egy/projekt-egy.component.html
@@ -64,8 +64,7 @@
   Bizonylatesirat = 9,
   Szamlazasirend = 10,
   Teendo = 11,
-  Datumok = 12,
-  Vagolap = 13
+  Datumok = 12
   }-->
 
   <ng-container *ngIf="projektservice.EgyMode === 1">
