--- a/src/app/vagolap/vagolap.component.html
+++ b/src/app/vagolap/vagolap.component.html
@@ -1,10 +1,12 @@
 <div class="alapkeret">
-  <h5>{{vagolapservice.cim}}</h5>
+  <h5 *ngIf="vagolapservice.Mode === 1">{{vagolapservice.cim}}</h5>
   <div>
     <nav>
-      <button [disabled]="eppFrissit" (click)="torles()" class="btn btn-sm btn-outline-primary navgomb" style="margin-right: 3px">
-        A vágólap törlése
-      </button>
+      <ng-container *ngIf="vagolapservice.Mode === 1">
+        <button [disabled]="eppFrissit" (click)="torles()" class="btn btn-sm btn-outline-primary navgomb" style="margin-right: 3px">
+          A vágólap törlése
+        </button>
+      </ng-container>
     </nav>
   </div>
   <table class="table table-bordered table-sm table-responsive" style="border: none">
@@ -20,18 +22,7 @@
     </thead>
     <tbody>
     <tr *ngFor="let item of vagolapservice.Dto; let i = index">
-      <td *ngIf="vagolapservice.Mode !== 4 && vagolapservice.Mode !== 5">
-      </td>
-      <td *ngIf="item.tipus === 0 && (vagolapservice.Mode === 4 || vagolapservice.Mode === 5)"
-          style="text-align: right; color: blue; text-decoration: underline; cursor: pointer;padding-left: 8px;padding-right: 8px"
-          (click)="beszur(i)">
-        <i class="fa fa-arrow-left" aria-hidden="true"></i>
-      </td>
-      <td *ngIf="item.tipus === 1 && (vagolapservice.Mode === 4)"
-          style="text-align: right; color: blue; text-decoration: underline; cursor: pointer;padding-left: 8px;padding-right: 8px"
-          (click)="beszur(i)">
-        <i class="fa fa-arrow-left" aria-hidden="true"></i>
-      </td>
+      <td><input type="checkbox" [(ngModel)] = "item.selected" [disabled]="isdisabled(i)" /></td>
       <td *ngIf="item.tipus === 0">{{item.iratkod}}</td>
       <td *ngIf="item.tipus === 1">{{item.bizonylatkod}}</td>
       <td *ngIf="item.tipus === 0"></td>
