--- a/src/app/projekt/bizonylatesirat/projekt-bizonylatesirat-list/projekt-bizonylatesirat-list.component.html
+++ b/src/app/projekt/bizonylatesirat/projekt-bizonylatesirat-list/projekt-bizonylatesirat-list.component.html
@@ -14,6 +14,9 @@
       <button [disabled]="eppFrissit" (click)="ujajanlat()" class="btn btn-sm btn-outline-primary navgomb">
         <i class="fa fa-plus" style="margin-right: 3px" aria-hidden="true"></i>Ajánlat
       </button>
+      <button [disabled]="eppFrissit" (click)="vagolaprol()" class="btn btn-sm btn-outline-primary navgomb">
+        <i class="fa fa-plus" style="margin-right: 3px" aria-hidden="true"></i>Vágólapról
+      </button>
     </nav>
   </div>
   <table class="table table-bordered table-sm table-responsive" style="border: none">
