xls és doc pdfben letölthető

--- a/src/app/irat/dokumentum/dokumentum-egy/dokumentum-egy.component.html
+++ b/src/app/irat/dokumentum/dokumentum-egy/dokumentum-egy.component.html
@@ -18,6 +18,9 @@
       <button [disabled]="eppFrissit" (click)="letoltes()" class="btn btn-sm btn-outline-primary navgomb">
         Letöltés
       </button>
+      <button [disabled]="eppFrissit" (click)="letoltesPDF()" class="btn btn-sm btn-outline-primary navgomb">
+        PDF
+      </button>
     </nav>
   </div>
 
