--- a/src/app/projekt/ajanlat/ajanlat/ajanlat.html
+++ b/src/app/projekt/ajanlat/ajanlat/ajanlat.html
@@ -7,7 +7,7 @@
       </div>
       <div class="col-md-2">
         <input type="date" class="form-control form-control-sm" id="ervenyes"
-               [(ngModel)]="projektkapcsolatservice.AjanlatErvenyes" name="ervenyes">
+               [(ngModel)]="ajanlatservice.AjanlatErvenyes" name="ervenyes">
       </div>
     </div>
 
@@ -18,7 +18,7 @@
       <div class="col-md-2">
         <input type="text" class="form-control form-control-sm" id="szuksaram"
                maxlength="20" required autocomplete="off"
-               [(ngModel)]="projektkapcsolatservice.AjanlatParam.SzuksegesAramerosseg" name="szuksaram">
+               [(ngModel)]="ajanlatservice.AjanlatParam.SzuksegesAramerosseg" name="szuksaram">
       </div>
     </div>
 
@@ -29,7 +29,7 @@
       <div class="col-md-2">
         <input type="text" class="form-control form-control-sm" id="tajolas"
                maxlength="20" required autocomplete="off"
-               [(ngModel)]="projektkapcsolatservice.AjanlatParam.Tajolas" name="tajolas">
+               [(ngModel)]="ajanlatservice.AjanlatParam.Tajolas" name="tajolas">
       </div>
     </div>
 
@@ -40,7 +40,7 @@
       <div class="col-md-2">
         <input type="number" class="form-control form-control-sm" id="termeles"
                required
-               [(ngModel)]="projektkapcsolatservice.AjanlatParam.Termeles" name="termeles">
+               [(ngModel)]="ajanlatservice.AjanlatParam.Termeles" name="termeles">
       </div>
     </div>
 
@@ -51,7 +51,7 @@
       <div class="col-md-6">
         <input type="text" class="form-control form-control-sm" id="megjegyzes"
                maxlength="200" autocomplete="off"
-               [(ngModel)]="projektkapcsolatservice.AjanlatParam.Megjegyzes" name="megjegyzes">
+               [(ngModel)]="ajanlatservice.AjanlatParam.Megjegyzes" name="megjegyzes">
       </div>
     </div>
 
@@ -61,24 +61,24 @@
       </div>
       <div class="col-md-2">
         <input type="text" class="form-control form-control-sm" id="netto" style="text-align:right"
-               readonly="true" [(ngModel)]="projektkapcsolatservice.AjanlatParam.Netto">
+               readonly="true" [(ngModel)]="ajanlatservice.AjanlatParam.Netto">
       </div>
       <div class="col-md-2">
         <input type="text" class="form-control form-control-sm" id="afa" style="text-align:right"
-               readonly="true" [(ngModel)]="projektkapcsolatservice.AjanlatParam.Afa">
+               readonly="true" [(ngModel)]="ajanlatservice.AjanlatParam.Afa">
       </div>
       <div class="col-md-2">
         <input type="text" class="form-control form-control-sm" id="brutto" style="text-align:right"
-               readonly="true" [(ngModel)]="projektkapcsolatservice.AjanlatParam.Brutto">
+               readonly="true" [(ngModel)]="ajanlatservice.AjanlatParam.Brutto">
       </div>
     </div>
 
 
-<!--  export enum UjajanlatContainerMode {
+<!--  export eAjanlatContainerModeMode {
   List = 1,
   Szerkesztes = 2
   }-->
-    <ng-container *ngIf="projektkapcsolatservice.AjanlatContainerMode === 1">
+    <ng-container *ngIf="ajanlatservice.AjanlatContainerMode === 1">
       <table class="table table-bordered table-sm table-responsive" style="border: none">
         <thead>
         <tr>
@@ -95,7 +95,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let item of projektkapcsolatservice.AjanlatParam.AjanlatBuf; let i = index">
+        <tr *ngFor="let item of ajanlatservice.AjanlatParam.AjanlatBuf; let i = index">
           <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"
               (click)="setClickedRow(i)">{{item.TetelTipus}}</td>
           <td>{{item.CikkNev}}</td>
@@ -111,14 +111,14 @@
         </tbody>
       </table>
     </ng-container>
-    <ng-container *ngIf="projektkapcsolatservice.AjanlatContainerMode === 2">
-      <app-projekt-bizonylatesirat-ujajanlat-szerkesztes></app-projekt-bizonylatesirat-ujajanlat-szerkesztes>
+    <ng-container *ngIf="ajanlatservice.AjanlatContainerMode === 2">
+      <app-ajanlat-tetel></app-ajanlat-tetel>
     </ng-container>
 
     <div class="row no-gutters" style="margin-bottom: 10px">
-      <button class="btn btn-sm btn-primary" [disabled]="eppFrissit || projektkapcsolatservice.AjanlatContainerMode === 2"
+      <button class="btn btn-sm btn-primary" [disabled]="eppFrissit || ajanlatservice.AjanlatContainerMode === 2"
               type="button" (click)="onSubmit()">Ok</button>
-      <button class="btn btn-sm btn-default" [disabled]="eppFrissit || projektkapcsolatservice.AjanlatContainerMode === 2"
+      <button class="btn btn-sm btn-default" [disabled]="eppFrissit || ajanlatservice.AjanlatContainerMode === 2"
               style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
     </div>
 
