--- a/src/app/projekt/bizonylatesirat/projekt-bizonylatesirat-container/projekt-bizonylatesirat-container.component.html
+++ b/src/app/projekt/bizonylatesirat/projekt-bizonylatesirat-container/projekt-bizonylatesirat-container.component.html
@@ -27,7 +27,7 @@ export enum BizonylatesIratContainerMode {
   <app-projekt-bizonylatesirat-ujirat></app-projekt-bizonylatesirat-ujirat>
 </ng-container>
 <ng-container *ngIf="projektkapcsolatservice.ContainerMode === 6">
-  <app-projekt-bizonylatesirat-ujajanlat></app-projekt-bizonylatesirat-ujajanlat>
+  <app-ajanlat></app-ajanlat>
 </ng-container>
 <ng-container *ngIf="projektkapcsolatservice.ContainerMode === 7">
   <app-projekt-bizonylatesirat-levalasztas></app-projekt-bizonylatesirat-levalasztas>
