--- a/src/app/projekt/projekt/projekt-iratminta/projekt-iratminta.component.html
+++ b/src/app/projekt/projekt/projekt-iratminta/projekt-iratminta.component.html
@@ -25,6 +25,6 @@
       </button>
     </nav>
   </div>
-  <app-errormodal [cim]="projektservice.cim"></app-errormodal>
+  <app-errormodal [cim]="'Iratminta'"></app-errormodal>
 </div>
 <app-spinner *ngIf="eppFrissit"></app-spinner>
