--- a/src/app/logon/szerepkorvalasztas/szerepkorvalasztas.component.html
+++ b/src/app/logon/szerepkorvalasztas/szerepkorvalasztas.component.html
@@ -11,7 +11,7 @@
       </thead>
       <tbody>
       <tr *ngFor="let item of logonservice.lehetsegesszerepkorokDto; let i = index">
-        <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="setClickedRow(i)">{{item.PARTICIOKOD}}</td>
+        <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="setClickedRow(i)">{{item.CSOPORTKOD}}</td>
         <td>{{item.PARTICIOMEGNEVEZES}}</td>
         <td>{{item.CSOPORT1}}</td>
       </tr>
