--- a/src/app/feliratkozas/feliratkozas-list/feliratkozas-list.component.html
+++ b/src/app/feliratkozas/feliratkozas-list/feliratkozas-list.component.html
@@ -22,7 +22,9 @@
     </thead>
     <tbody>
     <tr *ngFor="let item of feliratkozasservice.Dto; let i = index">
-      <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="setClickedRow(i)">{{item.FELIRATKOZASKOD}}</td>
+      <td style="text-align: right;color: blue;text-decoration: underline;cursor: pointer"
+          (click)="setClickedRow(i)">{{item.FELIRATKOZASKOD}}
+      </td>
       <td>{{item.LISTA}}</td>
       <td>{{item.NEV}}</td>
       <td>{{item.TELEPULES}}</td>
