--- a/src/app/fooldal/fooldal.component.html
+++ b/src/app/fooldal/fooldal.component.html
@@ -5,6 +5,7 @@
       {{sessiondto.CSOPORT}} csoportjának tagja.<br>
       Bejelentkezett {{sessiondto.LETREHOZVA | datetimehun}}-kor, munkamenete érvényes {{sessiondto.ERVENYES | datetimehun}}-ig
     </p>
+    <app-esemenynaplo></app-esemenynaplo>
   </div>
   <ng-template #elseBlock>
     Kérjük jelentkezzen be ill. válasszon szerepkört!
