--- a/src/app/ugyfel/ugyfel-egy/ugyfel-egy.component.html
+++ b/src/app/ugyfel/ugyfel-egy/ugyfel-egy.component.html
@@ -21,6 +21,9 @@
       <button [disabled]="eppFrissit" (click)="projekt()" class="btn btn-sm btn-outline-primary navgomb">
         Projekt
       </button>
+      <button [disabled]="eppFrissit" (click)="ugyfelterlink()" class="btn btn-sm btn-outline-primary navgomb">
+        Ügyféltér link
+      </button>
     </nav>
   </div>
 
@@ -28,7 +31,8 @@
     Reszletek = 1,
     Torles = 2,
     Modositas = 3,
-    Projekt = 4
+    Projekt = 4,
+    UgyfelterLink = 5
     }-->
 
   <ng-container *ngIf="ugyfelservice.EgyMode === 1">
@@ -43,6 +47,9 @@
   <ng-container *ngIf="ugyfelservice.EgyMode === 4">
     <app-ugyfel-nincsprojekt *ngIf="nincsProjekt"></app-ugyfel-nincsprojekt>
     <app-projekt-reszletek *ngIf="!nincsProjekt"></app-projekt-reszletek>
+  </ng-container>
+  <ng-container *ngIf="ugyfelservice.EgyMode === 5">
+    <app-ugyfel-ter-link></app-ugyfel-ter-link>
   </ng-container>
 
   <app-errormodal [cim]="ugyfelservice.cim"></app-errormodal>
