--- a/src/app/bizonylat/bizonylat-tetel-torles/bizonylat-tetel-torles.component.html
+++ b/src/app/bizonylat/bizonylat-tetel-torles/bizonylat-tetel-torles.component.html
@@ -1,7 +1,7 @@
 <div class="alapkeret">
   <h5>{{bizonylatservice.bizonylatLeiro.BizonylatNev}}tétel törlése</h5>
   <div style="margin-bottom: 10px">
-    <div style="font-size: smaller">{{bizonylatservice.ComplexDtoEdited.LstTetelDto[bizonylatservice.TetelDtoSelectedIndex].MEGNEVEZES}}</div>
+    <div style="font-size: smaller">{{megnevezes}}</div>
   </div>
   <p>Biztosan törölni akarja ezt a tételt?</p>
   <div class="row no-gutters" style="margin-bottom: 10px">
