--- a/src/app/ugynok/ugynok-container/ugynok-container.component.html
+++ b/src/app/ugynok/ugynok-container/ugynok-container.component.html
@@ -1,7 +1,8 @@
 <!--export enum FeliratkozasContainerMode {
 Blank = 0,
 List = 1,
-Egy = 2
+Egy = 2,
+Uj = 3
 }-->
 
 <ng-container *ngIf="feliratkozasservice.ContainerMode === 0">
@@ -12,5 +13,8 @@ Egy = 2
 </ng-container>
 <ng-container *ngIf="feliratkozasservice.ContainerMode === 2">
   <app-feliratkozas-egy></app-feliratkozas-egy>
+</ng-container>
+<ng-container *ngIf="feliratkozasservice.ContainerMode === 3">
+  <app-ugynok-szerkesztes></app-ugynok-szerkesztes>
 </ng-container>
 
