--- a/src/app/ugynok/ugynok-list/ugynok-list.component.html
+++ b/src/app/ugynok/ugynok-list/ugynok-list.component.html
@@ -43,5 +43,6 @@
   </app-toolbarfooter>
   <app-errormodal [cim]="feliratkozasservice.cim"></app-errormodal>
 </div>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
 
 
