--- a/src/app/ugyfel/ugyfel-egy/ugyfel-egy.component.html
+++ b/src/app/ugyfel/ugyfel-egy/ugyfel-egy.component.html
@@ -32,7 +32,7 @@
     Torles = 2,
     Modositas = 3,
     Projekt = 4,
-    UgyfelterLink = 5
+CreateNewLinkLink = 5
     }-->
 
   <ng-container *ngIf="ugyfelservice.EgyMode === 1">
