--- a/src/app/irat/dokumentum/dokumentum-feltoltes/dokumentum-feltoltes.component.html
+++ b/src/app/irat/dokumentum/dokumentum-feltoltes/dokumentum-feltoltes.component.html
@@ -10,6 +10,17 @@
         <input type="file" (change)="onFileChange($event)" #fileInput>
       </div>
     </div>
+    <div class="row no-gutters editform-row">
+      <div class="col-md-2">
+        <div class="editform-title">Megjegyzés</div>
+      </div>
+      <div class="col-md-4">
+        <input type="text" class="form-control form-control-sm" id="megjegyzes"
+               autocomplete="off"
+               [(ngModel)]="megjegyzes" name="megjegyzes">
+      </div>
+      <div style="color: red;margin-left: 4px">Ha ez a mező üresen marad, automatikusan az eredeti fájlnév kerül a megjegyzésbe.</div>
+    </div>
 
     <div class="row no-gutters" style="margin-bottom: 10px">
       <div class="col-md-2"></div>
