--- a/src/app/ugynok/ugynok-list/ugynok-list.component.html
+++ b/src/app/ugynok/ugynok-list/ugynok-list.component.html
@@ -4,7 +4,7 @@
                [(szempont)]="ugynokservice.szempont"
                [(minta)]="ugynokservice.minta"
                [enKereses]="!eppFrissit" (Kereses)="onKereses()"
-               [visUj]="true" (Uj)="uj()">
+               [visUj]="true" [enUj]="mod" (Uj)="uj()">
   </app-toolbar>
   <table class="table table-bordered table-sm table-responsive" style="border: none">
     <thead>
