--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-menu></app-menu>
-<div style="height: 58px"></div>
+<div style="height: 50px"></div>
+<app-dashboard></app-dashboard>
 
 <div style="margin-left: 5%;margin-right: 5%;width: auto;">
   <router-outlet></router-outlet>
