--- a/src/app/irat/dokumentum/dokumentum-feltoltes/dokumentum-feltoltes.component.html
+++ b/src/app/irat/dokumentum/dokumentum-feltoltes/dokumentum-feltoltes.component.html
@@ -1,7 +1,7 @@
 <div class="alapkeret">
   <h5>{{dokumentumservice.cim}} feltöltés</h5>
 
-  <img id="blah" style="max-width: 200px" [src]="imageSrc || 'http://placehold.it/180'" alt="your image" />
+  <!--<img id="blah" style="max-width: 200px" [src]="imageSrc || 'http://placehold.it/180'" alt="your image" />-->
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
