--- a/src/app/fooldal/fooldal.component.html
+++ b/src/app/fooldal/fooldal.component.html
@@ -1,15 +1,11 @@
-<div class="alapkeret">
-  <h5>Üdvözöljük</h5>
-  <div *ngIf="szerepkorkivalasztva; else elseBlock">
-    <p>Hello {{sessiondto.FELHASZNALO}} ({{sessiondto.AZONOSITO}}), ön a(z) {{sessiondto.PARTICIO}} partíció
-      {{sessiondto.CSOPORT}} csoportjának tagja.<br>
-      Bejelentkezett {{sessiondto.LETREHOZVA | datetimehun}}-kor, munkamenete érvényes {{sessiondto.ERVENYES | datetimehun}}-ig
-    </p>
-    <app-esemenynaplo></app-esemenynaplo>
-  </div>
-  <ng-template #elseBlock>
+<ng-container *ngIf="!szerepkorkivalasztva">
+  <div class="alapkeret">
+    <h5>Üdvözöljük</h5>
     Kérjük jelentkezzen be ill. válasszon szerepkört!
-  </ng-template>
-  <app-errormodal [cim]="'Főoldal'"></app-errormodal>
-</div>
-<app-spinner *ngIf="eppFrissit"></app-spinner>
+  </div>
+</ng-container>
+<ng-container *ngIf="szerepkorkivalasztva">
+  <app-esemenynaplo></app-esemenynaplo>
+</ng-container>
+
+
