--- a/src/app/ajanlatkeres/ajanlatkeres-reszletek/ajanlatkeres-reszletek.component.html
+++ b/src/app/ajanlatkeres/ajanlatkeres-reszletek/ajanlatkeres-reszletek.component.html
@@ -3,7 +3,7 @@
     <tbody>
     <tr>
       <td class="egylabel">Id:</td>
-      <td>{{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].UGYNOKKOD}}</td>
+      <td>{{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].AJANLATKERESKOD}}</td>
     </tr>
     <tr>
       <td class="egylabel">Az ügynök neve:</td>
