--- a/src/app/ajanlatkeres/ajanlatkeres-list/ajanlatkeres-list.component.html
+++ b/src/app/ajanlatkeres/ajanlatkeres-list/ajanlatkeres-list.component.html
@@ -23,7 +23,7 @@
     <tbody>
       <ng-container *ngFor="let item of ajanlatkeresservice.Dto; let i = index">
         <tr>
-          <td style="text-align: right;color: blue;text-decoration: underline;cursor: pointer" (click)="setClickedRow(i)">{{item.UGYNOKKOD}}</td>
+          <td style="text-align: right;color: blue;text-decoration: underline;cursor: pointer" (click)="setClickedRow(i)">{{item.AJANLATKERESKOD}}</td>
           <td>{{item.UGYNOKNEV}}</td>
           <td>{{item.NEV}}</td>
           <td>{{item.CIM}}</td>
