új jogok projekthez

--- a/src/app/nav/adoszamellenorzes/adoszamellenorzes.component.html
+++ b/src/app/nav/adoszamellenorzes/adoszamellenorzes.component.html
@@ -9,7 +9,7 @@
       </div>
       <div class="col-md-2">
         <input type="text" class="form-control form-control-sm" id="adoszam"
-               maxlength="8" required autocomplete="off"
+               minlength="8" maxlength="8" required autocomplete="off"
                [(ngModel)]="adoszam" name="adoszam">
       </div>
     </div>
