--- a/src/app/projekt/projekt/projekt-egy/projekt-egy.component.html
+++ b/src/app/projekt/projekt/projekt-egy/projekt-egy.component.html
@@ -68,25 +68,25 @@
   }-->
 
   <ng-container *ngIf="projektservice.EgyMode === 1">
-    <app-projekt-reszletek></app-projekt-reszletek>
+    <div [@rowanimation]><app-projekt-reszletek></app-projekt-reszletek></div>
   </ng-container>
   <ng-container *ngIf="projektservice.EgyMode === 2">
-    <app-projekt-torles></app-projekt-torles>
+    <div [@rowanimation]><app-projekt-torles></app-projekt-torles></div>
   </ng-container>
   <ng-container *ngIf="projektservice.EgyMode === 3">
-    <app-projekt-szerkesztes></app-projekt-szerkesztes>
+    <div [@rowanimation]><app-projekt-szerkesztes></app-projekt-szerkesztes></div>
   </ng-container>
   <ng-container *ngIf="projektservice.EgyMode === 4">
-    <app-projekt-statusz></app-projekt-statusz>
+    <div [@rowanimation]><app-projekt-statusz></app-projekt-statusz></div>
   </ng-container>
   <ng-container *ngIf="projektservice.EgyMode === 5">
-    <app-projekt-muszakiallapot></app-projekt-muszakiallapot>
+    <div [@rowanimation]><app-projekt-muszakiallapot></app-projekt-muszakiallapot></div>
   </ng-container>
   <ng-container *ngIf="projektservice.EgyMode === 6">
-    <app-projekt-inverter></app-projekt-inverter>
+    <div [@rowanimation]><app-projekt-inverter></app-projekt-inverter></div>
   </ng-container>
   <ng-container *ngIf="projektservice.EgyMode === 7">
-    <app-projekt-napelem></app-projekt-napelem>
+    <div [@rowanimation]><app-projekt-napelem></app-projekt-napelem></div>
   </ng-container>
   <ng-container *ngIf="projektservice.EgyMode === 8">
     <div [@rowanimation]><app-projekt-iratminta></app-projekt-iratminta></div>
@@ -95,10 +95,10 @@
     <div [@rowanimation]><app-projekt-bizonylatesirat-container></app-projekt-bizonylatesirat-container></div>
   </ng-container>
   <ng-container *ngIf="projektservice.EgyMode === 10">
-    <app-projekt-szamlazasirend-container></app-projekt-szamlazasirend-container>
+    <div [@rowanimation]><app-projekt-szamlazasirend-container></app-projekt-szamlazasirend-container></div>
   </ng-container>
   <ng-container *ngIf="projektservice.EgyMode === 11">
-    <app-projekt-teendo-container></app-projekt-teendo-container>
+    <div [@rowanimation]><app-projekt-teendo-container></app-projekt-teendo-container></div>
   </ng-container>
   <ng-container *ngIf="projektservice.EgyMode === 12">
     <div [@rowanimation]><app-projekt-datumok></app-projekt-datumok></div>
