--- a/src/app/csoport/csoport-list/csoport-list.component.html
+++ b/src/app/csoport/csoport-list/csoport-list.component.html
@@ -17,8 +17,8 @@
     <tbody>
     <tr *ngFor="let item of csoportservice.Dto; let i = index">
       <td *ngIf="csoportservice.zoom" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="selectforzoom(i)"><i class="fa fa-check" aria-hidden="true"></i></td>
-      <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="setClickedRow(i)">{{item.CSOPORTKOD}}</td>
-      <td>{{item.CSOPORT1}}</td>
+      <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="setClickedRow(i)">{{item.Csoportkod}}</td>
+      <td>{{item.Csoport1}}</td>
     </tr>
     </tbody>
   </table>
