--- a/src/app/logon/szerepkorvalasztas/szerepkorvalasztas.component.html
+++ b/src/app/logon/szerepkorvalasztas/szerepkorvalasztas.component.html
@@ -11,9 +11,9 @@
       </thead>
       <tbody>
       <tr *ngFor="let item of logonservice.lehetsegesszerepkorokDto; let i = index">
-        <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="setClickedRow(i)">{{item.CSOPORTKOD}}</td>
-        <td>{{item.PARTICIOMEGNEVEZES}}</td>
-        <td>{{item.CSOPORT1}}</td>
+        <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="setClickedRow(i)">{{item.Csoportkod}}</td>
+        <td>{{item.Particiomegnevezes}}</td>
+        <td>{{item.Csoport1}}</td>
       </tr>
       </tbody>
     </table>
